2005-07-03  Archie Cobbs  <archie@dellroad.org>

	* m4/acinclude.m4: fix broken expr(1) syntax

2005-07-03  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* org/omg/PortableServer/ServantLocatorPackage/package.html,
	org/omg/PortableServer/ServantLocatorPackage/CookieHolder.java:
	New files. 

2005-07-02  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* gnu/CORBA/_PolicyImplBase.java: Ihnerit from Policy.
	(ids): Made final non static, new constructor.
	(type, value, policyCode): New fields.
	(_invoke): Handle "value" operation.
	(getValue, getCode, destroy, toString, copy, equals, hashCode):
	New methods.
	* org/omg/CORBA/PolicyHelper.java (narrow): Removed check for
	repository for repository id.

2005-07-02  Audrius Meskauskas, <AudriusA@Bioinformatics.org> 

	* org/omg/PortableServer/IdAssignmentPolicyValue.java,
	org/omg/PortableServer/IdUniquenessPolicyValue.java,
	org/omg/PortableServer/ImplicitActivationPolicyValue.java,
	org/omg/PortableServer/LifespanPolicyValue.java,
	org/omg/PortableServer/ServantRetentionPolicyValue.java,
	org/omg/PortableServer/RequestProcessingPolicyValue.java: 
	Documentation update.

2005-07-02  Mark Wielaard  <mark@klomp.org>

	* all files: Update for new FSF address.

2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/undo/UndoManager.java: fixed API doc links,
	* javax/swing/undo/UndoableEditSupport.java: likewise.
	
2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/RenderingHints.java: API doc updates.

2005-07-01  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/announce/20050630.wml: New file.
	* doc/www.gnu.org/newsitems.txt: Add announcement.
	* doc/www.gnu.org/downloads/downloads.wml: Add 0.16 download.

2005-07-01  Roman Kennke  <roman@kennke.org>

	* gnu/classpath/ObjectPool.java:
	Removed this class. Some simple benchmarks show that it
	brings not much gain and actually decreases performance
	speed-wise.

2005-07-01  Chris Burdess  <dog@gnu.org>
